# libposit

./: .gitignore  .travis.sh  .travis.yml  LICENSE.md  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  readme.md
docs/: fuzz_testing.md  writing_an_implementation.md
include/slowposit/: posit.h  posit_macros.h  posit_types.h
src/: implementations.h  libposit.c  libposit.pc.in  posit_macros_impl.h  posit_test_macros.h  positutil.h  slowposit.c  test2.c  util.h
src/cjd/: impl.c  impl.h  readme.md
src/slow/: impl.h  implementation.h  macros.h  mpz_macros.h  slowposit.c
src/softposit/: c_convertDecToPosit32.c  c_convertPosit32ToDec.c  e_pow.c  i32_to_p16.c  i32_to_p32.c  i32_to_p8.c  i32_to_pX1.c  i32_to_pX2.c  i64_to_p16.c  i64_to_p32.c  i64_to_p8.c  i64_to_pX2.c  impl.h  implementation.h  internals.h  p16_add.c  p16_div.c  p16_mul.c  p16_sqrt.c  p16_sub.c  p16_to_i32.c  p16_to_i64.c  p16_to_p32.c  p16_to_p8.c  p16_to_ui32.c  p16_to_ui64.c  p32_add.c  p32_div.c  p32_mul.c  p32_sqrt.c  p32_sub.c  p32_to_i32.c  p32_to_i64.c  p32_to_p16.c  p32_to_p8.c  p32_to_ui32.c  p32_to_ui64.c  p8_add.c  p8_div.c  p8_mul.c  (+27 more)
src/templates/: gen_enumerate_implementations.h  gen_implement_posit.h  gen_posit.h  gen_positgen.h  gen_slowimpl.h  gen_useall.h  gen_useslow.h  macros.h  main.h
src/test/: perf_measure.c
src/test/convert/: toint.c
src/test/fuzz/: fuzz.c
src/test/math/: mathhdr.h  mathtest.c  mathtest.h
src/test/rounding/: findmiddle.c  posit_test_macros.h  roundingtest.c
src/test/universal/: posit16.c  posit32.c  posit64.c  posit8.c
src/test/util/: allimpls.c  allimpls.h
